--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
 title: Leaf Blog
 iconURL: assets/default-icon.png
-theme: jekyll-theme-leaf
+theme: jekyll-theme-hacker
 
 # for a clean URL
 permalink: :slug
 
 social:
-  twitter: _SupunKavinda
-  github: SupunKavinda
+  github: C4sp3N
 
 plugins:
  - jekyll-feed
