--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
-title: Leaf Blog
+title: SlaXx Blog
 iconURL: assets/default-icon.png
-theme: jekyll-theme-hacker
+theme: jekyll-theme-leaf
 
 # for a clean URL
 permalink: :slug
 
 social:
-  github: C4sp3N
+  twitter: SlaXxCho
+  github: SlaXxCho
 
 plugins:
  - jekyll-feed
  - jekyll-seo-tag
 
 ### comments & analytics
-hyvor_talk_website_id: 14
+hyvor_talk_website_id: 8408
 google_analytics: UA-NNNNNNNN-N
