--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: SlaXx Blog
 iconURL: assets/default-icon.png
-theme: jekyll-theme-leaf
+theme: jekyll-theme-hacker
 
 # for a clean URL
 permalink: :slug
